Added vscode dependencies to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,16 @@ build/
 *.vcxproj.filters
 *.vcxproj.user
 
+#Gitignore for VSCODE
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
