--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,10 @@ project(ImagineersFinalProject)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(ImagineersFinalProject
-    main.cpp)
+    main.cpp
+        user_io.cpp
+        user_io.h
+        build_sequence_heap.cpp
+        build_sequence_heap.h
+        file_parsing.h
+)
